crates/pitboard/tests/snapshots/contract__doctor.snap
---
source: tests/contract.rs
expression: "serde_json::json!({ \"exit\": code, \"envelope\": value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "doctor",
    "ok": true,
    "data": {
      "environment": {
        "config_file": "[path]",
        "storage_dir": "[path]",
        "credential_service": "[slot]",
        "credential_store": "[backend]",
        "home": "[path]",
        "codex": {
          "home": "[path]",
          "present": true,
          "backend": "file",
          "login_present": false,
          "version": "0.154.0"
        }
      },
      "checks": "[checks]"
    },
    "warnings": [],
    "error": null
  }
}
