crates/pitboard/tests/snapshots/contract__enroll_current.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "enroll",
    "ok": true,
    "data": {
      "label": "alpha",
      "provider": "claude",
      "email": "a@example.com",
      "enrolled": "current"
    },
    "warnings": [],
    "error": null
  }
}
