crates/pitboard/tests/snapshots/contract__enroll_renewed.snap
---
source: tests/contract.rs
expression: "serde_json :: json!\n({ \"exit\" : code, \"envelope\" : serde_json::from_str::<Value>(&out).unwrap() })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "enroll",
    "ok": true,
    "data": {
      "label": "beta",
      "email": "b@example.com",
      "enrolled": "renewed"
    },
    "warnings": [],
    "error": null
  }
}
