crates/pitboard/tests/snapshots/contract__enroll_signed_in.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json!\n({ \"exit\" : code, \"envelope\" : serde_json::from_str::<Value>(&out).unwrap() })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "enroll",
    "ok": true,
    "data": {
      "label": "beta",
      "provider": "claude",
      "email": "b@example.com",
      "enrolled": "signed_in"
    },
    "warnings": [],
    "error": null
  }
}
