crates/pitboard/tests/snapshots/contract__forget_signed_in.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 1,
  "envelope": {
    "v": 1,
    "command": "forget",
    "ok": false,
    "data": null,
    "warnings": [],
    "error": {
      "code": "cannot_forget_active_account",
      "message": "`alpha` is signed in; switch to another account before forgetting it.",
      "cause": null
    }
  }
}
