crates/pitboard/tests/snapshots/contract__status_offline.snap
---
source: crates/pitboard/tests/contract.rs
expression: "serde_json :: json! ({ \"exit\" : code, \"envelope\" : value })"
---
{
  "exit": 0,
  "envelope": {
    "v": 1,
    "command": "status",
    "ok": true,
    "data": {
      "slot": {
        "service": "[slot]",
        "default": false
      },
      "signed_in": {
        "account_uuid": "2b118e99-a111-4111-8111-111111111111",
        "email": "a@example.com",
        "organization_uuid": "2b118e99-o111-4111-8111-111111111111"
      },
      "signed_in_error": null,
      "accounts": [
        {
          "label": "alpha",
          "email": "a@example.com",
          "account_uuid": "2b118e99-a111-4111-8111-111111111111",
          "organization_uuid": "2b118e99-o111-4111-8111-111111111111",
          "signed_in": true,
          "switchable": false,
          "parked": null,
          "lasts": null,
          "usage": {
            "source": "remembered",
            "observed_at": "[time]",
            "windows": [
              {
                "kind": "five_hour",
                "scope": null,
                "percent": 12.0,
                "resets_at": 1789986600,
                "is_active": false,
                "severity": null,
                "length_seconds": 18000,
                "pace": null
              },
              {
                "kind": "seven_day",
                "scope": null,
                "percent": 40.0,
                "resets_at": 1790474400,
                "is_active": false,
                "severity": null,
                "length_seconds": 604800,
                "pace": null
              }
            ]
          },
          "stale": "not_asked",
          "provider": "claude",
          "qualified": "claude/alpha"
        },
        {
          "label": "beta",
          "email": "b@example.com",
          "account_uuid": "2b118e99-b111-4111-8111-111111111111",
          "organization_uuid": "2b118e99-p111-4111-8111-111111111111",
          "signed_in": false,
          "switchable": true,
          "parked": {
            "parked_at": "[time]",
            "access_expires_at": "[time]",
            "refresh_expires_at": "[time]"
          },
          "lasts": null,
          "usage": {
            "source": "remembered",
            "observed_at": "[time]",
            "windows": [
              {
                "kind": "five_hour",
                "scope": null,
                "percent": 12.0,
                "resets_at": 1789986600,
                "is_active": false,
                "severity": null,
                "length_seconds": 18000,
                "pace": null
              },
              {
                "kind": "seven_day",
                "scope": null,
                "percent": 40.0,
                "resets_at": 1790474400,
                "is_active": false,
                "severity": null,
                "length_seconds": 604800,
                "pace": null
              }
            ]
          },
          "stale": "not_asked",
          "provider": "claude",
          "qualified": "claude/beta"
        }
      ]
    },
    "warnings": [],
    "error": null
  }
}
